Buscador:
Algunas mejoras menores en diseño y funcionalidad.